--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,7 @@ jobs:
           cache: 'pnpm'
 
       - name: Install dependencies
-        run: pnpm install
+        run:  pnpm install --no-frozen-lockfile
 
       - name: Run type check
         run: pnpm check
@@ -124,7 +124,7 @@ jobs:
           sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf libgtk-3-dev
 
       - name: Install dependencies
-        run: pnpm install
+        run:  pnpm install --no-frozen-lockfile
 
       - name: Build Tauri app (dry run)
         run: pnpm tauri build --ci
