--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -119,6 +119,7 @@ jobs:
           files: |
             src-tauri/target/release/bundle/deb/*.deb
             src-tauri/target/release/bundle/appimage/*.AppImage
+            src-tauri/target/release/bundle/appimage/*.AppImage.sig
             src-tauri/target/release/bundle/rpm/*.rpm
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -130,7 +131,9 @@ jobs:
           tag_name: v${{ needs.create-release.outputs.version }}
           files: |
             src-tauri/target/release/bundle/msi/*.msi
+            src-tauri/target/release/bundle/msi/*.msi.sig
             src-tauri/target/release/bundle/nsis/*.exe
+            src-tauri/target/release/bundle/nsis/*.exe.sig
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -142,9 +145,83 @@ jobs:
             src-tauri/target/release/bundle/**/*
           retention-days: 7
 
+  generate-updater-json:
+    name: Generate Updater JSON
+    needs: [create-release, build-and-upload]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v6
+
+      - name: Download Linux artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: linux-bundles
+          path: linux-bundles
+
+      - name: Download Windows artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: windows-bundles
+          path: windows-bundles
+
+      - name: Generate latest.json
+        run: |
+          VERSION="${{ needs.create-release.outputs.version }}"
+          REPO="KaiErikNiermann/sts-stat-viewer"
+          
+          # Read signature files
+          LINUX_SIG=""
+          WINDOWS_MSI_SIG=""
+          WINDOWS_NSIS_SIG=""
+          
+          if [ -f "linux-bundles/appimage/"*.AppImage.sig ]; then
+            LINUX_SIG=$(cat linux-bundles/appimage/*.AppImage.sig)
+          fi
+          
+          if [ -f "windows-bundles/msi/"*.msi.sig ]; then
+            WINDOWS_MSI_SIG=$(cat windows-bundles/msi/*.msi.sig)
+          fi
+          
+          if [ -f "windows-bundles/nsis/"*.exe.sig ]; then
+            WINDOWS_NSIS_SIG=$(cat windows-bundles/nsis/*.exe.sig)
+          fi
+          
+          # Generate latest.json
+          cat > latest.json << EOF
+          {
+            "version": "${VERSION}",
+            "notes": "See the release notes at https://github.com/${REPO}/releases/tag/v${VERSION}",
+            "pub_date": "$(date -u +%Y-%m-%dT%H:%M:%SZ)",
+            "platforms": {
+              "linux-x86_64": {
+                "signature": "${LINUX_SIG}",
+                "url": "https://github.com/${REPO}/releases/download/v${VERSION}/sts-stat-viewer_${VERSION}_amd64.AppImage"
+              },
+              "windows-x86_64": {
+                "signature": "${WINDOWS_NSIS_SIG}",
+                "url": "https://github.com/${REPO}/releases/download/v${VERSION}/sts-stat-viewer_${VERSION}_x64-setup.exe"
+              }
+            }
+          }
+          EOF
+          
+          cat latest.json
+
+      - name: Upload latest.json
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: v${{ needs.create-release.outputs.version }}
+          files: latest.json
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   publish-release:
     name: Publish Release
-    needs: [create-release, build-and-upload]
+    needs: [create-release, build-and-upload, generate-updater-json]
     runs-on: ubuntu-latest
     if: ${{ !inputs.draft }}
     permissions:
